tests/tests/snapshots/test__jsdoc__inline-serialize.snap
---
source: tests/tests/jsdoc.rs
expression: "JSDoc::default().with_serde(mode).bigint(BigIntExportBehavior::Number).export(&crate::types().0).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.



export type A = { 
		a: B,
		b: B,
		c: B,
		d: D,
		e: GenericFlattened<number>,
	};

export type AGenericStruct<T> = { 
		field: Demo<T, boolean>,
	};

export type ActualType = { 
		a: GenericType<string>,
	};

export type B = { 
		b: number,
	};

export type BasicEnum = "A" | "B";

export type BoxFlattened = { 
		b: BoxedInner,
	};

export type BoxInline = { 
		c: BoxedInner,
	};

export type BoxedInner = { 
		a: number,
	};

export type BracedStruct = string;

/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type CommentedEnum = 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ A: number } | 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
{ B: { 
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number } };

/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
export type CommentedStruct = { 
		
	/**
 * Some triple-slash comment
 * Some more triple-slash comment
 */
a: number,
	};

export type D = { 
		flattened: number,
	};

export type Demo<A, B> = { 
		a: A,
		b: B,
	};

export type DeprecatedEnumVariants = 
	/**
 * @deprecated
 */
"A" | 
	/**
 * @deprecated Nope
 */
"B" | 
	/**
 * @deprecated Nope
 */
"C";

export type DeprecatedFields = { 
		a: number,
		
	/**
 * @deprecated
 */
b: string,
		
	/**
 * @deprecated This field is cringe!
 */
c: string,
		
	/**
 * @deprecated This field is cringe!
 */
d: string,
	};

export type DeprecatedTupleVariant = [
	/**
 * @deprecated
 */
string, 
	/**
 * @deprecated Nope
 */
string, 
	/**
 * @deprecated Nope
 */
number];

/**
 * @deprecated
 */
export type DeprecatedType = { 
		a: number,
	};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg = { 
		a: number,
	};

/**
 * @deprecated Look at you big man using a deprecation message
 */
export type DeprecatedTypeWithMsg2 = { 
		a: number,
	};

export type DoubleFlattened = { 
		a: ToBeFlattened,
		b: ToBeFlattened,
	};

export type Eight = { A: string } | "B";

export type EnumMacroAttributes = { A: string } | { bbb: number } | { cccc: number } | { D: { a: string; b: number } };

export type EnumReferenceRecordKey = { 
		a: Partial<{ [key in BasicEnum]: number }>,
	};

export type EnumRenameAllUppercase = "HELLOWORLD" | "VARIANTB" | "TESTINGWORDS";

export type ExtraBracketsInTupleVariant = { A: string };

export type ExtraBracketsInUnnamedStruct = string;

export type First = { 
		a: string,
	};

export type FlattenEnum = { tag: "One" } | { tag: "Two" } | { tag: "Three" };

export type FlattenEnumStruct = (FlattenEnum) & { 
		outer: string,
	};

export type FlattenOnNestedEnum = (NestedEnum) & { 
		id: string,
	};

export type FlattenedInner = { 
		c: Inner,
	};

export type Fourth = { 
		a: First,
		b: First,
	};

export type GenericFlattened<T> = { 
		generic_flattened: T,
	};

export type GenericStruct<T> = { 
		arg: T,
	};

export type GenericTupleStruct<T> = T;

export type GenericType<T> = "Undefined" | T;

export type HasGenericAlias = { [key in number]: string };

export type InlineEnumField = { A: PlaceholderInnerField };

export type InlineOptionalType = { 
		optional_field: PlaceholderInnerField | null,
	};

export type InlineStruct = { 
		ref_struct: SimpleStruct,
		val: number,
	};

export type InlineTuple = { 
		demo: [string, boolean],
	};

export type InlineTuple2 = { 
		demo: [InlineTuple, boolean],
	};

export type InlinerStruct = { 
		inline_this: InlineStruct,
		dont_inline_this: RefStruct,
	};

export type Inner = { 
		a: number,
		b: FlattenedInner,
	};

export type InvalidToValidType = { 
		cause: null | null,
	};

export type Issue281 = { 
		default_unity_arguments: string[],
	};

/**
 * https://github.com/specta-rs/specta/issues/374
 */
export type Issue374 = { 
		foo: boolean,
		bar: boolean,
	};

export type KebabCase = { 
		"test-ing": string,
	};

export type MacroEnum = { Demo: string } | { Demo2: { demo2: string } };

export type MacroStruct = string;

export type MacroStruct2 = { 
		demo: string,
	};

export type MyEmptyInput = Record<string, never>;

export type MyEnum = { A: string } | { B: number };

export type MyEnumAdjacent = { t: "Variant"; c: (First) };

export type MyEnumExternal = { Variant: (First) };

export type MyEnumTagged = (First) & { type: "Variant" };

export type MyEnumUntagged = (First);

export type NestedEnum = { type: "a"; value: string } | { type: "b"; value: number };

export type NonOptional = string | null;

export type Optional = { 
		a: number | null,
		b?: number | null,
		c: string | null,
		d: boolean,
	};

export type OptionalInEnum = { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } };

export type OptionalOnNamedField = string | null;

export type OptionalOnTransparentNamedField = { 
		b: string | null,
	};

export type OptionalOnTransparentNamedFieldInner = string | null;

export type OverridenStruct = { 
		overriden_field: string,
	};

export type PlaceholderInnerField = { 
		a: string,
	};

export type Primitives = { 
		"1": number,
		"2": number,
		"3": number,
		"4": number,
		"5": number,
		"6": number,
		"7": number,
		"8": number,
		"9": number,
		a: number,
		b: number,
		c: number,
		d: number,
		e: number,
		f: boolean,
		"10": string,
		"11": { 
	start: number,
	end: number,
},
		"12": { 
	start: number,
	end: number,
},
		"13": null,
		"14": [string, number],
		"15": [string, number, boolean],
		"16": [[string, number], [boolean, string, boolean], null],
		"17": [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean],
		"18": string,
		"19": string,
		"1a": string,
		"1b": string,
		"1c": string,
		"1d": string,
		"1e": string,
		"1f": string,
		"20": { 
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
},
		"21": { 
	secs: number,
	nanos: number,
},
		"22": string,
		"23": boolean,
		"24": number,
		"25": number[],
		"26": number[],
		"27": number[],
		"28": number[],
		"29": MyEnum[],
		"2a": MyEnum[],
		"2b": MyEnum[],
		"2c": MyEnum[],
		"2d": number[],
		"2e": number[],
		"2f": number | null,
		"30": null | null,
		"31": number[] | null,
		"32": string | null,
		"33": string | null,
		"34": Unit1,
		"35": Unit2,
		"36": Unit3,
		"37": Unit4,
		"38": Unit5,
		"39": Unit6,
		"3a": Unit7,
		"3b": SimpleStruct,
		"3c": TupleStruct1,
		"3d": TupleStruct3,
		"3e": TestEnum,
		"3f": RefStruct,
		"40": InlinerStruct,
		"41": GenericStruct<number>,
		"42": GenericStruct<string>,
		"43": FlattenEnumStruct,
		"44": OverridenStruct,
		"45": HasGenericAlias,
		"46": SkipVariant,
		"47": SkipVariant2,
		"48": SkipVariant3,
		"49": SkipStructFields,
		"4a": SpectaSkipNonTypeField,
		"4b": EnumMacroAttributes,
		"4c": InlineEnumField,
		"4d": InlineOptionalType,
		"4e": Rename,
		"4f": TransparentType,
		"50": TransparentType2,
		"51": TransparentTypeWithOverride,
		"52": (number | null)[],
		"53": Partial<{ [key in BasicEnum]: null }>,
		"54": number | null,
		"55": PlaceholderInnerField[],
		"56": Partial<{ [key in BasicEnum]: number }>,
		"57": EnumReferenceRecordKey,
		"58": FlattenOnNestedEnum,
		"59": null,
		"5a": null,
		"5b": never,
		"5c": MyEmptyInput,
		"5d": string,
		"5e": [string],
		"5f": ExtraBracketsInTupleVariant,
		"60": ExtraBracketsInUnnamedStruct,
		"61": MyEnum[],
		"62": InlineTuple,
		"63": InlineTuple2,
		"64": string,
		"65": string,
		"66": SkippedFieldWithinVariant,
		"67": KebabCase,
		"68": string[],
		"69": Issue281,
		"6a": RenameWithWeirdCharsField,
		"6b": RenameWithWeirdCharsVariant,
		"6c": Issue374,
		"6d": Type,
		"6e": ActualType,
		"6f": SpectaTypeOverride,
		"70": InvalidToValidType,
		"71": TupleStruct,
		"72": TupleStructWithRep,
		"73": GenericTupleStruct<string>,
		"74": BracedStruct,
		"75": StructRenameAllUppercase,
		"76": RenameSerdeSpecialChar,
		"77": EnumRenameAllUppercase,
		"78": Recursive,
		"79": RecursiveMapValue,
		"7a": RecursiveTransparent,
		"7b": RecursiveInEnum,
		"7c": NonOptional,
		"7d": OptionalOnNamedField,
		"7e": OptionalOnTransparentNamedField,
		"7f": OptionalInEnum,
		"80": Optional,
		"81": UntaggedVariants,
		"82": UntaggedVariantsWithoutValue,
		"83": { [key in string]: null },
		"84": Regular,
		"85": { [key in never]: null },
		"86": Partial<{ [key in UnitVariants]: null }>,
		"87": Partial<{ [key in UntaggedVariantsKey]: null }>,
		"88": Partial<{ [key in Variants]: null }>,
		"89": MacroStruct,
		"8a": MacroStruct2,
		"8b": MacroEnum,
		"8c": DeprecatedType,
		"8d": DeprecatedTypeWithMsg,
		"8e": DeprecatedTypeWithMsg2,
		"8f": DeprecatedFields,
		"90": DeprecatedTupleVariant,
		"91": DeprecatedEnumVariants,
		"92": CommentedStruct,
		"93": CommentedEnum,
		"94": SingleLineComment,
		"95": Demo<number, boolean>,
		"96": Demo<number, boolean>,
		"97": Demo<number, boolean>,
		"98": Demo<number, boolean>,
		"99": Demo<number, boolean>,
		"9a": { [key in string]: number },
		"9b": { [key in number]: string },
		"9c": { [key in string]: AGenericStruct<number> },
		"9d": AGenericStruct<number>,
		"9e": A,
		"9f": DoubleFlattened,
		a0: FlattenedInner,
		a1: BoxFlattened,
		a2: BoxInline,
		a3: First,
		a4: Second,
		a5: Third,
		a6: Fourth,
		a7: TagOnStructWithInline,
		a8: Sixth,
		a9: Seventh,
		aa: Eight,
		ab: Tenth,
		ac: MyEnumTagged,
		ad: MyEnumExternal,
		ae: MyEnumAdjacent,
		af: MyEnumUntagged,
	};

export type Recursive = { 
		demo: Recursive,
	};

export type RecursiveInEnum = { A: (RecursiveInEnum) };

export type RecursiveInline = (RecursiveInline);

export type RecursiveMapValue = { 
		demo: { [key in string]: RecursiveMapValue },
	};

export type RecursiveTransparent = RecursiveInline;

export type RefStruct = TestEnum;

export type Regular = { [key in string]: null };

export type Rename = "OneWord" | "Two words";

export type RenameSerdeSpecialChar = { 
		b: number,
	};

export type RenameWithWeirdCharsField = { 
		odata_context: string,
	};

export type RenameWithWeirdCharsVariant = { "@odata.context": string };

export type Second = { 
		a: number,
	};

export type Seventh = { 
		a: First,
		b: Second,
	};

export type SimpleStruct = { 
		a: number,
		b: string,
		c: [number, string, number],
		d: string[],
		e: string | null,
	};

/**
 * Some single-line comment
 */
export type SingleLineComment = 
	/**
 * Some single-line comment
 */
{ A: number } | 
	/**
 * Some single-line comment
 */
{ B: { 
	/**
 * Some single-line comment
 */
a: number } };

export type Sixth = { 
		a: First,
		b: First,
	};

export type SkipStructFields = { 
		a: number,
	};

export type SkipVariant = { A: string };

export type SkipVariant2 = { tag: "A"; data: string };

export type SkipVariant3 = { A: { a: string } };

export type SkippedFieldWithinVariant = { type: "A"; data: null } | { type: "B"; data: string };

export type SpectaSkipNonTypeField = { 
		a: number,
	};

export type SpectaTypeOverride = { 
		string_ident: string,
		u32_ident: number,
		path: string,
	};

export type StructRenameAllUppercase = { 
		A: number,
		B: number,
	};

export type TagOnStructWithInline = { 
		type: "TagOnStructWithInline",
		a: First,
		b: First,
	};

export type Tenth = string | "B" | First;

export type TestEnum = "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } };

export type Third = (First) & { 
		b: { [key in string]: string },
		c: First,
	};

export type ToBeFlattened = { 
		a: string,
	};

export type TransparentType = TransparentTypeInner;

export type TransparentType2 = null;

export type TransparentTypeInner = { 
		inner: string,
	};

export type TransparentTypeWithOverride = string;

export type TupleStruct = string;

export type TupleStruct1 = number;

export type TupleStruct3 = [number, boolean, string];

export type TupleStructWithRep = string;

export type Type = never;

export type Unit1 = null;

export type Unit2 = Record<string, never>;

export type Unit3 = [];

export type Unit4 = null;

export type Unit5 = "A";

export type Unit6 = { A: [] };

export type Unit7 = { A: Record<string, never> };

export type UnitVariants = "A" | "B" | "C";

export type UntaggedVariants = string | number | { id: string } | [string, boolean];

export type UntaggedVariantsKey = string | number;

export type UntaggedVariantsWithoutValue = string | [number, string] | number;

export type UserListSelection<name, age> = { 
		name: name,
		age: age,
	};

export type UserSelection<name, age> = { 
		name: name,
		age: age,
	};

export type Variants = { A: string } | { B: number } | { C: number };
