tests/tests/snapshots/test__jsdoc__jsdoc-export-to-files-both.snap
---
source: tests/tests/jsdoc.rs
expression: output
---
test/
  jsdoc/
    jsdoc_export_to_files_runtime_imports_types/
      one.js (621 bytes)
      ────────────────────────────────────────
      // This file has been generated by Specta. Do not edit this file manually.
      
      /**
       * @typedef {import("./three")} test$jsdoc$jsdoc_export_to_files_runtime_imports_types$three
       * @typedef {import("./two")} test$jsdoc$jsdoc_export_to_files_runtime_imports_types$two
       */
      /**
      	* @typedef {{
      	*		two: test$jsdoc$jsdoc_export_to_files_runtime_imports_types$two.Two,
      	*		three: test$jsdoc$jsdoc_export_to_files_runtime_imports_types$three.Three,
      	*	}} One
      	* @property {test$jsdoc$jsdoc_export_to_files_runtime_imports_types$two.Two} two
      	* @property {test$jsdoc$jsdoc_export_to_files_runtime_imports_types$three.Three} three
      	*/
      ════════════════════════════════════════

      three.js (161 bytes)
      ────────────────────────────────────────
      // This file has been generated by Specta. Do not edit this file manually.
      /**
      	* @typedef {{
      	*		active: boolean,
      	*	}} Three
      	* @property {boolean} active
      	*/
      ════════════════════════════════════════

      two.js (155 bytes)
      ────────────────────────────────────────
      // This file has been generated by Specta. Do not edit this file manually.
      /**
      	* @typedef {{
      	*		value: string,
      	*	}} Two
      	* @property {string} value
      	*/
      ════════════════════════════════════════
