tests/tests/snapshots/test__jsdoc__primitives-many-inline-serde.snap
---
source: tests/tests/jsdoc.rs
expression: output
---
ERROR: Unresolved generic reference 'GenericReference { id: TypeId(0x17177485ba968fa4b446f08c808dbecb) }' while validating 'Vec.<list_item>.<generic_ref>'
