tests/tests/snapshots/test__jsdoc__primitives-many-inline-serde_phases.snap
---
source: tests/tests/jsdoc.rs
expression: output
---
ERROR: Unresolved generic reference 'GenericReference { id: TypeId(0xa7c5b2b00937d2c54cb3ccdca0b9431c) }' while validating 'Vec.<list_item>.<generic_ref>'
